--- a/example/src/index.html
+++ b/example/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Pixel</title>
     <meta charset="utf-8">
-  <link rel="stylesheet" href="/src.e31bb0bc.css"></head>
+  </head>
   <body>
     <div id="app"></div>
-    <script src="/src.e31bb0bc.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
